# quantummind

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: BASELINES.md  ODS_V1.md  QAEG_METHOD_NOTE.md  algorithm_wiki_corpus_protocol.md  candidate_value_label_audit.md  current_project_state.md  registry_expansion_algowiki_v1.md  registry_expansion_algowiki_v1_audit.md  registry_expansion_proposal_algowiki.md  rich_algowiki_experiment_plan.md  soundness.md
results/: fdv1_graph_summary.csv  fdv1_graph_top9.csv  fdv1_screening_v01_families.csv  fdv1_screening_v01_summary.csv  fdv1_screening_v01_top9.csv  live_graph_summary.csv  live_graph_top.csv  qaeg_screen_v01_manifest.json  qaeg_v1_baseline_manifest.json  review_graph_summary.csv  review_graph_top9.csv  review_screening_v01_families.csv  review_screening_v01_summary.csv  review_screening_v01_top9.csv
scripts/: baseline_methods.py  regraph_runs.py  run_baselines.py  score_open_discovery.py
scripts/datasets/: __init__.py  algowiki_audit_cards.py  (+21 more)
tests/: test_action_integrity.py  test_algowiki_adapter.py  test_algowiki_rich_adapter.py  test_barrier_revision_regressions.py  test_candidate_value_labeling.py  test_canonical_interface.py  test_counterfactuals.py  test_gold_isolation.py  test_graph.py  test_graph_screen.py  test_live_smoke.py  test_loc_budget.py  test_models.py  test_ods.py  test_ods_cli.py  test_openai_provider.py  test_packaged_resources.py  test_paperbench.py  test_registry_expansion_algowiki.py  test_regraph_runs.py  test_scoring_integrity.py  test_validation.py  test_workflow.py
(+9092 files in other folders)
