[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantummind-lite"
version = "0.1.0"
description = "Lightweight sequential LLM workflow for quantum speedup hypothesis generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]
live = ["openai>=1.50"]
data = [
  "datasets",
  "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantummindlite = [
  "resources/configs/*.yaml",
  "resources/prompts/*.md",
  "resources/paperbench/*.yaml",
  "resources/paperbench/*/*.yaml",
  "resources/paperbench/families/*/*.yaml",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true
